# ie-titanic-utils

./: Procfile  README.md  app.py  pyproject.toml  requirements.txt
binder/: environment.yml
src/ie_utils/: __init__.py  __main__.py
tests/: test_ie_utils.py
